# vigils

./: .gitattributes  .gitignore  CHANGELOG.md  CHANGELOG.zh-CN.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  README.zh-CN.md  install.ps1  install.sh  rust-toolchain.toml
apps/desktop/: Cargo.toml  README.md  build.rs  tauri.conf.json
apps/desktop/capabilities/: default.json
apps/desktop/icons/: README.md  icon.icns
apps/desktop/permissions/autogenerated/: approve_server_command_drift.toml  approve_tool.toml  approve_tool_drift.toml  export_session_replay.toml  fts_search.toml  get_approval_detail.toml  get_event_detail.toml  get_server_onboarding.toml  list_drifted_servers.toml  list_drifted_tools.toml  list_pending_approvals.toml  list_pending_tool_approvals.toml  list_privacy_findings.toml  list_recent_events.toml  list_servers.toml  protection_summary.toml  reject_server_command_drift.toml  reject_tool_drift.toml  replay_session.toml  resolve_approval.toml  verify_chain.toml
apps/desktop/src/: commands.rs  dispatcher.rs  embed.rs  export.rs  ledger_path.rs  lib.rs  main.rs  render.rs
apps/desktop/tests/: acceptance.rs  embed_hub_resolve_approval.rs  embed_hub_skeleton.rs
apps/desktop/ui/: .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/desktop/ui/src/: App.vue  main.ts  router.ts
apps/desktop/ui/src/api/: ipc.ts
apps/desktop/ui/src/assets/: tailwind.css
apps/desktop/ui/src/components/: ApprovalDetailDrawer.vue  EventDetailModal.vue  PanelCard.vue  ProgressBar.vue  ServerOnboardingCard.vue  ShortcutHelpModal.vue  StatCard.vue
apps/desktop/ui/src/composables/: useGlobalShortcuts.ts  useLedgerLiveUpdates.ts
apps/desktop/ui/src/i18n/: index.ts
apps/desktop/ui/src/pages/: ActivityFeed.vue  ApprovalQueue.vue  Approvals.vue  NotImplemented.vue  PrivacyFindings.vue  ProtectionOverview.vue  (+6 more)
apps/native-host/: Cargo.toml
apps/native-host/src/: install.rs  lib.rs  main.rs
apps/native-host/tests/: acceptance.rs
apps/vigil-hub-cli/: Cargo.toml
apps/vigil-hub-cli/src/: add_remote.rs  demo.rs  hook.rs  inspect.rs  lib.rs  main.rs  posture.rs  quickstart.rs  serve.rs  setup.rs  setup_hooks.rs  setup_mcp.rs  wrap.rs
apps/vigil-hub-cli/tests/: cli_add_remote.rs  serve_smoke.rs
crates/vigil-audit/: Cargo.toml
crates/vigil-audit/benches/: ledger.rs
crates/vigil-audit/src/: approvals.rs  checkpoint.rs  error.rs  hash.rs  ledger.rs  lib.rs  outbox.rs  registry.rs  schema.sql  span.rs
crates/vigil-audit/tests/: approval_cross_proc_wait.rs  checkpoint_anchor.rs  drift_state_machine.rs  engine_degraded.rs  hash_chain_vectors.rs  ledger_invariants.rs  outbox_state_machine.rs  print_hash_vectors.rs  redaction_schema.rs  session_risk.rs
crates/vigil-browser/: Cargo.toml
crates/vigil-browser/src/: audit.rs  classifier.rs  framing.rs  lib.rs  origin.rs  protocol.rs
crates/vigil-browser/tests/: audit_strings_golden.rs  rule_sync.rs  scenario_redact_roundtrip.rs
crates/vigil-firewall/: Cargo.toml
crates/vigil-firewall/src/: catalog.rs  engine.rs  extract.rs  lib.rs  preflight.rs  scorer.rs
crates/vigil-firewall/tests/: acceptance.rs  preflight.rs  preflight_with_mock_engine.rs
crates/vigil-http-auth/: Cargo.toml
crates/vigil-http-auth/src/: audit.rs  client.rs  error.rs  jwks.rs  jwt.rs  lib.rs  oauth.rs  planner.rs  prm.rs  store.rs  types.rs
crates/vigil-http-auth/tests/: audit_strings_golden.rs  error_display_golden.rs  integration.rs
crates/vigil-http-auth/tests/common/: mod.rs
crates/vigil-http-transport/: Cargo.toml
crates/vigil-http-transport/src/: client.rs  jwks.rs  lib.rs  loopback.rs  streamable.rs  upstream.rs  verifier.rs
crates/vigil-http-transport/tests/: e2e_real_tls.rs
crates/vigil-http-transport/tests/common/: mod.rs
crates/vigil-lease/: Cargo.toml
crates/vigil-lease/src/: broker.rs  error.rs  lib.rs  store.rs  value.rs
crates/vigil-lease/tests/: audit_strings_golden.rs  broker_lifecycle.rs  redaction_redline.rs
crates/vigil-mcp/: Cargo.toml
crates/vigil-mcp/src/: descriptor.rs  hub.rs  lib.rs  namespace.rs  oracle.rs  protocol.rs  stdio.rs  upstream.rs
crates/vigil-mcp/tests/: hub_acceptance.rs  hub_alias_detokenize.rs  hub_descriptor_meta_scan.rs  hub_http_transport_inherits.rs  hub_leak_scan.rs  resolve_approval.rs  upstream_non_exhaustive.rs
crates/vigil-policy/: Cargo.toml
crates/vigil-policy/src/: defaults.rs  engine.rs  lib.rs
crates/vigil-redaction/: Cargo.toml
crates/vigil-redaction/benches/: precision_recall.rs  scan_hardonly.rs  scrub.rs
crates/vigil-redaction/examples/: bootstrap_fallback_smoke.rs  multilang_baseline_spike.rs  r1_ensemble_e2e.rs
crates/vigil-redaction/fixtures/multilang_baseline_v1/: MANIFEST.json  README.md
crates/vigil-redaction/src/: engine.rs  ensemble.rs  label.rs  lang_hint.rs  lib.rs  merge.rs  model_descriptor.rs  scan.rs  sentinel.rs
crates/vigil-redaction/src/bootstrap/: download.rs  error.rs  manifest.rs  mod.rs  tests.rs  verify.rs
crates/vigil-redaction/tests/: engine_mock.rs  engine_ort_smoke.rs  fixture_invariants.rs  multilang_baseline_v1_loader.rs
crates/vigil-redaction/tests/fixtures/: labeled_samples.json
crates/vigil-runner/: Cargo.toml
crates/vigil-runner-types/: Cargo.toml  README.md
crates/vigil-runner-types/src/: audit.rs  env_policy.rs  error.rs  lib.rs  plan.rs
crates/vigil-runner/src/: leak_scan.rs  lib.rs  native.rs  wasm.rs
crates/vigil-runner/tests/: audit_sink.rs  audit_strings_golden.rs  native_acceptance.rs  wasm_acceptance.rs
crates/vigil-sandbox-linux/: Cargo.toml
crates/vigil-sandbox-linux/src/: lib.rs  linux.rs
crates/vigil-sdk/: Cargo.toml  README.md
crates/vigil-sdk/src/: lib.rs
crates/vigil-types/: Cargo.toml
crates/vigil-types/src/: approval.rs  audit.rs  decision.rs  effect.rs  invocation.rs  lease.rs  lib.rs  principal.rs  server.rs  session.rs  tool.rs
crates/vigil-types/tests/: invariants.rs
crates/vigil-ui-protocol/: Cargo.toml
crates/vigil-ui-protocol/src/: command.rs  error.rs  lib.rs  response.rs
(+925 files in other folders)
