[package]
name = "vigil-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

# I08a CLI bin(默认一直可用)
[[bin]]
name = "vigil-desktop"
path = "src/main.rs"

# I08b GUI bin(Tauri;feature 门控,默认关闭 —— `cargo test --workspace` 不编)
# v0.11 ISS-102/103/104:bin name="gui" 对齐 path basename,Tauri v2 bundle 默认查
# `target/release/<path-basename>` 复制 binary;改名让 bundle 找得到。原 release.yml
# raw build 仍可用 `--bin gui --features gui` 路径。
[[bin]]
name = "gui"
path = "src/bin/gui.rs"
required-features = ["gui"]

[lib]
name = "vigil_desktop"
path = "src/lib.rs"

# I08b feature matrix:
# - 默认(无 feature):纯 CLI,零 Tauri 依赖,cargo test --workspace 零 regression
# - `gui`:启用 Tauri 2 GUI binary(拉 ~200 transitive crates,仅 `cargo tauri dev` 或
#   `cargo build --features gui` 时触发);v0.5 P1 ADR 0014 α1 起额外拉 vigil-mcp /
#   vigil-firewall / vigil-policy(embed Hub 骨架)。三者全部 optional + dep:* 门控,
#   默认 feature 仍 0 痕迹(`cargo tree --no-default-features` 不出现)。
[features]
default = []
gui = [
    "dep:tauri",
    "dep:tauri-build",
    "dep:tokio",
    "dep:dirs",
    "dep:vigil-mcp",
    "dep:vigil-firewall",
    "dep:vigil-policy",
]

[dependencies]
vigil-types = { path = "../../crates/vigil-types" }
vigil-ui-protocol = { path = "../../crates/vigil-ui-protocol" }
vigil-audit = { path = "../../crates/vigil-audit" }
vigil-runner = { path = "../../crates/vigil-runner", default-features = false }
# v0.5 P1 ADR 0014 α1:GUI bin embed Hub 骨架(默认关闭;features = ["gui"] 拉)。
# `vigil-firewall.default-features = false`:防默认拉 ort feature(ISS-008 P2 模型路径,
# 启动 ~7s cold-start;GUI α1 无需 PiiScanner=ort,Firewall::new 走 NoopEngine)。
vigil-mcp = { path = "../../crates/vigil-mcp", optional = true }
vigil-firewall = { path = "../../crates/vigil-firewall", optional = true, default-features = false }
vigil-policy = { path = "../../crates/vigil-policy", optional = true }
clap = { workspace = true }
# gui.rs 用 `#[derive(serde::Serialize)]`;serde_json 不等于 serde namespace
serde = { workspace = true }
serde_json = { workspace = true }
serde_jcs = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }

# I08b(feature `gui`):Tauri 2 GUI 栈,optional 避免默认拉
tauri = { version = "2", optional = true, default-features = false, features = ["wry"] }
tokio = { workspace = true, optional = true }
# β5:用户数据目录解析(跨平台);仅 gui feature 需要,运行时定位 ledger 持久化路径
dirs = { version = "6", optional = true }

[build-dependencies]
tauri-build = { version = "2", optional = true, default-features = false , features = [] }

[dev-dependencies]
tempfile = { workspace = true }
vigil-lease = { path = "../../crates/vigil-lease" }
rusqlite = { workspace = true }
