[package]
name = "vigil-http-auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
vigil-audit = { path = "../vigil-audit" }
vigil-lease = { path = "../vigil-lease" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
oauth2 = { workspace = true }
jsonwebtoken = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
# 复用带 `test-util` feature 的 vigil-audit:允许注入"脏"SQLite 行回归 fail-closed。
vigil-audit = { path = "../vigil-audit", features = ["test-util"] }
vigil-lease = { path = "../vigil-lease" }
