[package]
name = "vigil-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "MCP (Model Context Protocol) hub for Vigil — server registry, descriptor pinning, outbox, drift state machine"
keywords = ["vigil", "mcp", "model-context-protocol", "registry"]
categories = ["network-programming", "api-bindings"]

[lints]
workspace = true

[dependencies]
vigil-types = { path = "../vigil-types" }
vigil-audit = { path = "../vigil-audit" }
vigil-firewall = { path = "../vigil-firewall" }
vigil-redaction = { path = "../vigil-redaction" }
# I07.5+ (ADR 0007 §I-7.1):共享 Native spawn env 政策 helper(apply_native_env_policy)。
# ADR 0018 v0.13 split:改依赖 vigil-runner-types(pure types + env policy,0 vigil
# deps,unblock SDK publish chain),不再拉 vigil-runner concrete impl(wasmtime 等)。
vigil-runner-types = { path = "../vigil-runner-types" }
# v0.5 P1 ADR 0014 α2:`pub fn Hub::resolve_approval` 用到的 typed 协议结构
# (ResolveApprovalReq / ApprovalAction / ApprovalResolutionDto)。
# vigil-ui-protocol 自身只依赖 vigil-types / vigil-audit / vigil-runner,
# 与 vigil-mcp 现有 deps 无循环。
vigil-ui-protocol = { path = "../vigil-ui-protocol" }

serde = { workspace = true }
serde_json = { workspace = true }
serde_jcs = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
rusqlite = { workspace = true }
vigil-policy = { path = "../vigil-policy" }
# α2 集成测试 `tests/resolve_approval.rs` 用 Ledger 真实建 approval + 调
# `Hub::resolve_approval` 全链路验证 approve / deny / cancel(已是 main dep,
# 此处显式声明仅为 IDE / `cargo metadata` 可读性)。
