[package]
name = "vigil-sdk"
# 0.1.4:全员对齐 workspace(crates.io + 公开 vigils 仓统一版本线)。
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Stable public SDK facade for embedding Vigil's local AI safety runtime — typed decisions/audit + firewall execution + redaction scanning"
readme = "README.md"
keywords = ["vigil", "ai-safety", "sdk", "embedding", "control-plane"]
categories = ["api-bindings", "authentication"]

[lints]
workspace = true

[features]
# v0.8 Sprint 4 P3.1 — opt-in ORT 工厂入口(ensemble 多模型路径)。
# 启用后 SDK 暴露 `ort_ensemble_scanner_arc_from_env` 给企业 release runner 用。
# 默认关闭 — SDK default-safe path(NoopEngine + Hard rules)不依赖 ORT runtime。
ort = ["vigil-firewall/ort", "vigil-redaction/ort"]

[dependencies]
# Stable SDK re-exports;path-dep,locked to workspace version
vigil-types = { path = "../vigil-types", version = "0.2.1-rc.2" }
vigil-firewall = { path = "../vigil-firewall", version = "0.2.1-rc.2" }
vigil-redaction = { path = "../vigil-redaction", version = "0.2.1-rc.2" }
vigil-mcp = { path = "../vigil-mcp", version = "0.2.1-rc.2" }
# v0.16 FirewallBuilder facade:内部装配用(Ledger / PolicyEngine + default_ruleset)。
# **不** re-export —— 仅 firewall_builder 内化使用,守 SDK 边界。
vigil-audit = { path = "../vigil-audit", version = "0.2.1-rc.2" }
vigil-policy = { path = "../vigil-policy", version = "0.2.1-rc.2" }
# decide_call 便捷方法生成 invocation_id(UUIDv4);内部用,不进 SDK public API。
uuid = { workspace = true }
# decide_call 的 args 形参类型(serde_json::Value 已是 ToolInvocation.args 的公开类型,不扩面)。
serde_json = { workspace = true }
