[package]
name = "vigil-ui-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "IPC protocol types for Vigil desktop UI — Tauri command request/response schemas with capability gating"
keywords = ["vigil", "tauri", "ipc", "ui-protocol"]
categories = ["data-structures", "api-bindings"]

[lints]
workspace = true

[dependencies]
vigil-types = { path = "../vigil-types", version = "0.2.1" }
vigil-audit = { path = "../vigil-audit", version = "0.2.1" }
# ADR 0018 v0.13 split:改依赖 vigil-runner-types(pure types,0 vigil deps),
# 不再拉 vigil-runner concrete(wasmtime/sandbox-linux),unblock SDK publish。
vigil-runner-types = { path = "../vigil-runner-types", version = "0.2.1" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_jcs = { workspace = true }
